# rsomics-modularity

./: Cargo.toml  README.md
benches/: bench.rs  gnm_bench.part  gnm_bench.txt
src/: cli.rs  lib.rs
tests/: compat.rs
tests/golden/: gnm_a.part  gnm_a.txt  gnm_b.part  gnm_b.txt  k5.part  k5.txt  karate.txt  karate_2comm.part  karate_4comm.part  path6.part  path6.txt  selfloop_bridge.part  selfloop_bridge.txt  selfloop_isolated.part  selfloop_isolated.txt  two_triangles.part  two_triangles.txt
